logs/geoparsepy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Shapely-1.6.3.dist-info'...
Listing './lib/python3.5/site-packages/geoparsepy'...
Compiling './lib/python3.5/site-packages/geoparsepy/PostgresqlHandler.py'...
***   File "./lib/python3.5/site-packages/geoparsepy/PostgresqlHandler.py", line 128
    except psycopg2.Error, err :
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geoparsepy/common_parse_lib.py'...
***   File "./lib/python3.5/site-packages/geoparsepy/common_parse_lib.py", line 73
    namespace_entity_extract = ur'\A.*?(?P<NAMESPACE>([a-zA-Z0-9_@\-]){2,}[.](([a-zA-Z0-9_@\-]){1,}[.]){1,5}([a-zA-Z0-9_@\-]){1,})'
                                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geoparsepy/example_geoparse.py'...
***   File "./lib/python3.5/site-packages/geoparsepy/example_geoparse.py", line 237
    print 'Usage: example_geoparse.py <config file>\n'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/geoparsepy/example_preprocess_focus_area.py'...
***   File "./lib/python3.5/site-packages/geoparsepy/example_preprocess_focus_area.py", line 163
    print 'Usage: example_preprocess_focus_area.py <config file>\n'
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/geoparsepy-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shapely'...
Listing './lib/python3.5/site-packages/shapely/.libs'...
Listing './lib/python3.5/site-packages/shapely/algorithms'...
Listing './lib/python3.5/site-packages/shapely/examples'...
Listing './lib/python3.5/site-packages/shapely/geometry'...
Listing './lib/python3.5/site-packages/shapely/speedups'...
Listing './lib/python3.5/site-packages/shapely/vectorized'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
